--- a/custom.css
+++ b/custom.css
@@ -139,6 +139,16 @@ img {
   margin-bottom: -70px;
 }
 
+.smallmedimg{
+  position: relative;
+  max-width: 40%;
+  width: 30%;
+  box-sizing: border-box;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: -70px;
+}
 
 .medimg {
   position: relative;
